Update backend components with security fixes and API improvements